<resources>
    <string name="app_name">Lib_F01_Framework</string>

    <!-- 常用共用字符串 -->
    <string name="common_cancel">取消</string>
    <string name="common_ok">确定</string>
    <string name="common_next_step">下一步</string>
    <string name="common_edit">编辑</string>
    <string name="common_complete">完成</string>
    <string name="common_success">提交成功</string>
    <!-- 登陆注册模块 -->
    <string name="action_logout">注销</string>
    <string name="title_activity_login">登录</string>
    <string name="publish">发布</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="username">用户名</string>
    <string name="goods_discription">商品描述</string>
    <string name="seletct_a_pic">从相册选择一张照片</string>
    <string name="submit">提交</string>
    <string name="detail">详情</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册并登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮件格式错误</string>
    <string name="error_invalid_password">密码大于 6 位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这个是必填项</string>
    <string name="title_activity_register">注册</string>
    <string name="sign_username_hint">用户名/手机号码/邮箱</string>
    <string name="sign_password_hint">请输入密码</string>
    <string name="sign_password_sure_hint">请确认密码</string>
    <string name="sign_forget_pwd_str">忘记密码？</string>
    <string name="sign_auth_login">一键登录</string>
    <string name="sign_login_failed">登陆失败</string>

    <string name="sign_menu_phone_register">手机号注册</string>
    <string name="sign_menu_email_register">邮箱注册</string>

    <string name="register_phone_number">手机号</string>
    <string name="register_phone_number_hint">手机获取验证码</string>
    <string name="register_phone_verify_code">验证码</string>
    <string name="register_phone_verify_code_hint">请输入验证码</string>
    <string name="register_phone_input_hint">请输入手机号</string>
    <string name="register_phone_request_verify_code">获取验证码</string>
    <string name="register_phone_request_code_success">成功发送短信验证码请求</string>
    <string name="register_phone_number_error">请输入正确手机号</string>
    <string name="register_phone_verify_code_error">请输入正确验证码</string>
    <string name="register_password_not_equal">再次输入的密码不一致</string>

    <string name="register_email_account">邮箱</string>
    <string name="register_email_account_hint">请输入您的邮箱</string>
    <string name="register_email_account_verify">验证邮箱</string>
    <string name="register_email_account_error_tips">请输入合法的邮箱地址</string>
    <string name="register_email_send_verify_success">验证邮件已经发送到邮箱%s，请打开邮箱确认。</string>

    <string name="register_set_password">密码设置</string>
    <string name="app_about">关于</string>
    <string name="app_settings">设置</string>
    <string name="app_mine">我的</string>

    <!-- -->
    <string name="simple_info_des">内心的读白</string>
    <string name="nick_name_empty_boy_tips">您还没有设置大名</string>
    <string name="nick_name_empty_girl_tips">您还没有设置芳名</string>
    <string name="simple_info_self_description_tips">抒写您的芳容，捕获对方的心</string>

   <!-- 左侧菜单栏 -->
    <string name="navigation_menu_info_nick">昵称：%s</string>
    <string name="navigation_menu_info_level">等级：%s</string>
    <string name="navigation_menu_mine">我的</string>
    <string name="navigation_menu_settings">设置</string>
    <string name="navigation_menu_about">关于</string>
</resources>
