<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/base_layout_style"
    android:orientation="vertical"
    tools:context=".app.register.PasswordSetActivity">

    <LinearLayout style="@style/base_layout_style">

        <TextView
            style="@style/white_bkg_normal_text_style"
            android:text="@string/sign_password_hint" />

        <EditText
            android:id="@+id/password_set_first_edit"
            style="@style/pwd_edit_style"
            android:hint="@string/register_phone_number_hint"/>
    </LinearLayout>

    <View style="@style/sep_view_item" />

    <LinearLayout style="@style/base_layout_style">

        <TextView
            style="@style/white_bkg_normal_text_style"
            android:text="@string/sign_password_sure_hint" />

        <EditText
            android:id="@+id/password_set_second_edit"
            style="@style/pwd_edit_style"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:hint="@string/register_phone_verify_code_hint"/>
    </LinearLayout>

    <View style="@style/sep_view_item" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <Button
            android:id="@+id/password_set_ok_btn"
            style="@style/common_next_button"
            android:text="@string/common_ok" />
    </RelativeLayout>
</LinearLayout>