<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/x755"
    android:layout_height="@dimen/x555"
    android:layout_gravity="center"
    android:background="@drawable/custom_info_bubble"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding_normal_size">

    <RelativeLayout style="@style/base_layout_style">

        <ImageView
            android:id="@+id/info_window_head_img"
            android:layout_width="@dimen/x150"
            android:layout_height="@dimen/x150"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_default_avatar" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/x755"
        android:layout_height="@dimen/x350"
        android:orientation="vertical">

        <RelativeLayout style="@style/base_layout_style">

            <TextView
                android:id="@+id/info_window_nickname"
                style="@style/normal_text_style"
                android:layout_centerHorizontal="true"
                tools:text="@string/navigation_menu_info_nick" />
        </RelativeLayout>

        <LinearLayout
            style="@style/base_layout_style"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/normal_text_style_smaller"
                android:layout_gravity="center_horizontal"
                android:padding="0dip"
                android:text="@string/simple_info_des" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:paddingBottom="@dimen/x45">

                <TextView
                    android:id="@+id/info_window_self_description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x100"
                    android:background="@drawable/normal_text_round_bg"
                    android:padding="@dimen/x8"
                    android:textSize="@dimen/text_smaller_size"
                    tools:text="@string/action_logout" />

            </ScrollView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>